RESOLVED FIXED149822
[iOS] REGRESSION(r190434): Media continues to play when locking screen
https://bugs.webkit.org/show_bug.cgi?id=149822
Summary [iOS] REGRESSION(r190434): Media continues to play when locking screen
Jer Noble
Reported 2015-10-05 15:48:50 PDT
[iOS] REGRESSION(r190434): Media continues to play when locking screen
Attachments
Patch (18.35 KB, patch)
2015-10-05 16:05 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2015-10-05 16:05:05 PDT
Brent Fulgham
Comment 2 2015-10-05 16:44:04 PDT
Comment on attachment 262475 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=262475&action=review This change looks good. It would be even better if we had a test that locking the device during playback (with and without air-play) did the right thing. Do we have such a test? If not, could you at least file a bug to remind us to create that test? > Source/WebCore/platform/audio/ios/MediaSessionManagerIOS.mm:280 > + Vector<PlatformMediaSession*> sessions = this->sessions(); You could use auto here, but that's taste-specific.
WebKit Commit Bot
Comment 3 2015-10-05 21:14:02 PDT
Comment on attachment 262475 [details] Patch Clearing flags on attachment: 262475 Committed r190604: <http://trac.webkit.org/changeset/190604>
WebKit Commit Bot
Comment 4 2015-10-05 21:14:07 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.