[iOS] REGRESSION(r190434): Media continues to play when locking screen https://bugs.webkit.org/show_bug.cgi?id=149822

Reviewed by Brent Fulgham.

Source/WebCore:

In MediaSessionManagerIOS.mm, both -applicationWillEnterForeground: and
-applicationDidBecomeActive: called
PlatformMediaSessionManager::applicationWillEnterForeground(), leading to the
PlatformMediaSession's m_interruptionCount becoming increasingly unbalanced.

Rename PlatformMediaSessionManager::applicationWillEnterForeground() to
applicationDidEnterForeground() to more correctly reflect when this notification will be
called. Add a new method, MediaSessionManagerIOS::applicationWillEnterForeground(bool),
whose paramater is whether the screen was locked. This allows the beginInterruption() and
endInterruption() methods to be correctly balanced.

Drive-by fix: remove the unimplemented declarations for application{will,did}Enter{Fore,Back}ground()
from PlatformMediaSession.h.

* platform/audio/PlatformMediaSession.h:
* platform/audio/PlatformMediaSessionManager.cpp:
(WebCore::PlatformMediaSessionManager::applicationDidEnterForeground):
(WebCore::PlatformMediaSessionManager::applicationWillEnterForeground): Deleted.
* platform/audio/PlatformMediaSessionManager.h:
* platform/audio/ios/MediaSessionManagerIOS.h:
* platform/audio/ios/MediaSessionManagerIOS.mm:
(WebCore::MediaSessionManageriOS::applicationDidEnterBackground):
(WebCore::MediaSessionManageriOS::applicationWillEnterForeground):
(-[WebMediaSessionHelper applicationWillEnterForeground:]):
(-[WebMediaSessionHelper applicationDidBecomeActive:]):
* testing/Internals.cpp:
(WebCore::Internals::applicationDidEnterForeground):
(WebCore::Internals::applicationWillEnterForeground): Deleted.
* testing/Internals.h:
* testing/Internals.idl:

Source/WebKit2:

Pass through isSuspendedUnderLock when notifying the WebPage that the
applicationWillEnterForeground, and pass that boolean in the userInfo of the
WebUIApplicationWillEnterForegroundNotification.

* UIProcess/ios/WebPageProxyIOS.mm:
(WebKit::WebPageProxy::applicationWillEnterForeground):
* WebProcess/WebPage/WebPage.h:
* WebProcess/WebPage/WebPage.messages.in:
* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::applicationWillEnterForeground):

LayoutTests:

applicationWillEnterForeground() -> applicationDidEnterForeground().

* media/video-background-playback-expected.txt:
* media/video-background-playback.html:
* media/video-background-tab-playback-expected.txt:
* media/video-background-tab-playback.html:


Canonical link: https://commits.webkit.org/167952@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190604 268f45cc-cd09-0410-ab3c-d52691b4dbfc