Source/WebCore/platform/audio/ios/MediaSessionManagerIOS.h
@@ -49,6 +49,7 @@ public:
     void externalOutputDeviceAvailableDidChange();
     virtual bool hasWirelessTargetsAvailable() override;
     void applicationDidEnterBackground(bool isSuspendedUnderLock);
+    void applicationWillEnterForeground(bool isSuspendedUnderLock);
 
 private:
     friend class PlatformMediaSessionManager;
@@ -67,6 +68,7 @@ private:
     virtual bool sessionCanLoadMedia(const PlatformMediaSession&) const override;
     
     RetainPtr<WebMediaSessionHelper> m_objcObserver;
+    bool m_isInBackground { false };
 };
 
 } // namespace WebCore
