Source/WebCore/platform/audio/ios/MediaSessionManagerIOS.mm
@@ -252,6 +252,10 @@ void MediaSessionManageriOS::applicationDidEnterBackground(bool isSuspendedUnder
 {
     LOG(Media, "MediaSessionManageriOS::applicationDidEnterBackground");
 
+    if (m_isInBackground)
+        return;
+    m_isInBackground = true;
+
     if (!isSuspendedUnderLock)
         return;
 
@@ -262,6 +266,23 @@ void MediaSessionManageriOS::applicationDidEnterBackground(bool isSuspendedUnder
     }
 }
 
+void MediaSessionManageriOS::applicationWillEnterForeground(bool isSuspendedUnderLock)
+{
+    LOG(Media, "MediaSessionManageriOS::applicationWillEnterForeground");
+
+    if (!m_isInBackground)
+        return;
+    m_isInBackground = false;
+
+    if (!isSuspendedUnderLock)
+        return;
+
+    Vector<PlatformMediaSession*> sessions = this->sessions();
+    for (auto* session : sessions) {
+        if (restrictions(session->mediaType()) & BackgroundProcessPlaybackRestricted)
+            session->endInterruption(PlatformMediaSession::MayResumePlaying);
+    }
+}
 
 } // namespace WebCore
 
@@ -432,11 +453,13 @@ void MediaSessionManageriOS::applicationDidEnterBackground(bool isSuspendedUnder
 
     LOG(Media, "-[WebMediaSessionHelper applicationWillEnterForeground]");
 
+    BOOL isSuspendedUnderLock = [[[notification userInfo] objectForKey:@"isSuspendedUnderLock"] boolValue];
+
     WebThreadRun(^{
         if (!_callback)
             return;
 
-        _callback->applicationWillEnterForeground();
+        _callback->applicationWillEnterForeground(isSuspendedUnderLock);
     });
 }
 
@@ -453,7 +476,7 @@ void MediaSessionManageriOS::applicationDidEnterBackground(bool isSuspendedUnder
         if (!_callback)
             return;
 
-        _callback->applicationWillEnterForeground();
+        _callback->applicationDidEnterForeground();
     });
 }
 
